--- a/2D-game/index.html
+++ b/2D-game/index.html
@@ -4,10 +4,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Game</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+
+
+    <!-- Characters -->
+    <img class="player hide" id="player" src="assets/player.png" >
+    <img class="enemy hide" id="angler1" src="assets/angler1.png" >
+    <img class="enemy hide" id="angler2" src="assets/angler2.png" >
+    <img class="enemy hide" id="lucky" src="assets/lucky.png" >
+
+    <!-- Props -->
+    <img class="projectile hide" id="projectile" src="assets/projectile.png" >
+    <img class="particle hide" id="gears" src="assets/gears.png" >
+
+    <!-- Environment -->
+    <img class="layer hide" id="layer1" src="assets/layer1.png" >
+    <img class="layer hide" id="layer2" src="assets/layer2.png" >
+    <img class="layer hide" id="layer3" src="assets/layer3.png" >
+    <img class="layer hide" id="layer4" src="assets/layer4.png" >
+
     <script src="scripts.js"></script>
   </body>
 </html>
