added character movement on arrow press, in 4 direction,

--- a/Four Directional Keyboard Control/index.html
+++ b/Four Directional Keyboard Control/index.html
@@ -1,19 +1,24 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Four Directional Keyboard Control Game</title>
-    <link type="text/css" rel="stylesheet" href="style.css" >
-</head>
-<body>
+    <link type="text/css" rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="wrapper">
-        <canvas id="canvas1"></canvas>
-        <img src="assets/overlay.png" id="overlay">
-        <img src="assets/leaves_left.png" id="leaves_left">
-        <img src="assets/leaves_right.png" id="leaves_right">
+      <canvas id="canvas1"></canvas>
+      <img src="assets/overlay.png" id="overlay" />
+      <img src="assets/leaves_left.png" id="leaves_left" />
+      <img src="assets/leaves_right.png" id="leaves_right" />
+      <img class="hide" src="assets/owlbear.png" id="owlbear" />
     </div>
-    <img class="hide" src="assets/owlbear.png" id="owlbear">
+
+    <img class="hide" src="assets/grass.png" id="grass" />
+    <img class="hide" src="assets/bush.png" id="bush" />
+    <img class="hide" src="assets/plant.png" id="plant" />
+
     <script src="scripts.js"></script>
-</body>
+  </body>
 </html>
